Full_deployment_db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-db
spec:
  selector:
    matchLabels:
      app: todo-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: todo-db
    spec:
      containers:
        - name: todo-db
          image: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-initdb
              mountPath: /docker-entrypoint-initdb.d
            - name: todo-pv-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-initdb
          configMap:
            name: mysql-init-config
        - name: todo-pv-storage
          persistentVolumeClaim:
            claimName: todo-app-pvc
