Full_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
  - port: 8080
    targetPort: 80
    nodePort: 31000
