Full_service_db.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  selector:
    app: todo-db
  ports:
    - port: 3306
      targetPort: 3306
